Class Methods actionPerformed() & loadRowSize() Instance rowSizeSpinner Assigned via Integer.valueOf() Instead of new Integer().